# gtk-dash

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
src/features/: CMakeLists.txt
src/features/activity-manager/: activity-manager.cpp
src/features/activity-manager/include/: activity-manager.hpp
src/features/commander/: CMakeLists.txt  commander.cpp
src/features/commander/include/: commander.hpp
src/features/config-manager/: CMakeLists.txt  config-manager.cpp
src/features/config-manager/include/: config-manager.hpp
src/features/launcher/: CMakeLists.txt
src/features/launcher/main/: CMakeLists.txt  main-activity.cpp  main-activity.hpp
src/features/launcher/spotify/: CMakeLists.txt  spotify-activity.cpp  spotify-activity.hpp
src/features/plugins/: CMakeLists.txt
src/features/plugins/spotify/: CMakeLists.txt  spotify.cpp
src/features/plugins/spotify/include/: spotify.hpp
src/layout/: #activity_main.xml#  activity_main.xml  activity_main.xml~  activity_spotify.xml~  main.xml~
src/lib/: CMakeLists.txt
src/lib/activity/: CMakeLists.txt  activity.hpp
